@@ -41,6 +41,7 @@ import java.util.Hashtable;
 import java.util.Vector;
 import org.gjt.sp.jedit.buffer.*;
 import org.gjt.sp.jedit.gui.*;
+import org.gjt.sp.jedit.msg.MultiSelectStatusChanged;
 import org.gjt.sp.jedit.syntax.*;
 import org.gjt.sp.jedit.*;
 import org.gjt.sp.util.Log;
@@ -3597,8 +3598,7 @@ loop:		for(int i = caretLine + 1; i < getLineCount(); i++)
 	public final void setMultipleSelectionEnabled(boolean multi)
 	{
 		JEditTextArea.multi = multi;
-		if(view.getStatus() != null)
-			view.getStatus().updateMiscStatus();
+		EditBus.send(new MultiSelectStatusChanged(null));
 	}
 	//}}}
 
